Fixed spacing between forms

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,6 +75,7 @@ body {
 
 .searchBar {
   width: 30% !important;
+  margin-right: 10px;
 }
 
 .crop {
